--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@
    
 }
 body{
-    background-image: linear-gradient(rgb(21, 216, 237),pink,skyblue);
+    background-image: linear-gradient( #8285db,white, #1BFFFF);
 }
 .head{
     margin-left: 30px;
@@ -17,7 +17,8 @@ body{
     align-items: center;
     position: fixed;
  width:100%;
-background-image: linear-gradient(skyblue,rgb(232, 241, 243));
+background-color: rgb(187, 199, 209);
+text-align: center;
 }
 ul{
     display: flex;
@@ -34,7 +35,12 @@ a{
     text-decoration: none;
     font-size: 25px;
     color: rgb(13, 10, 20);
-    font-weight: bold;
+   
+}
+a:hover{
+    text-decoration: underline;
+    transition:8s ease-in-out;
+   
 }
 .main{
     display: flex;
