--- a/index.css
+++ b/index.css
@@ -17,7 +17,7 @@ body{
     align-items: center;
     position: fixed;
  width:100%;
-background-color: rgb(187, 199, 209);
+background-color: rgb(242, 244, 247);
 text-align: center;
 }
 ul{
@@ -107,7 +107,7 @@ h6{
     border-radius: 10%;
     box-shadow: 0 5px 9px rgba(0,0,0,0.1);
 }
-.a{
+.a:hover{
     transform: translateY(-10px);
     box-shadow: 0 15px 25px rgba(0, 0, 0, 0.2);
     transition: all 0.3s ease;
@@ -178,7 +178,7 @@ p{
         display: flex;
         justify-content: space-between;
         align-items: center;
-        background-color: rgb(187, 199, 209);
+        background-color:rgb(226, 220, 220);
     }
     ul{
         display: flex;
@@ -196,6 +196,11 @@ p{
         font-size: 10px;
         color: rgb(13, 10, 20);
         font-weight: bold;
+    }
+    .a:hover{
+        transform: translateY(-10px);
+        box-shadow: 0 15px 25px rgba(0, 0, 0, 0.2);
+        transition: all 0.3s ease;
     }
     .main{
        flex-direction: column;
@@ -361,6 +366,165 @@ p{
     }
 
 }
+@media screen and (min-width:900px) {
+    .head{
+        margin-left: 30px;
+      margin-top: 30px;
+        font-size: 50px;
+    }
+    .Navbhar{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        position: fixed;
+     width:100%;
+    background-color: rgb(242, 244, 247);
+    text-align: center;
+    }
+    ul{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    li{
+        margin-right: 40px;
+        margin-top: 30px;
+        list-style: none;
+    }
+    a{
+        padding: 0px;
+        text-decoration: none;
+        font-size: 25px;
+        color: rgb(13, 10, 20);
+       
+    }
+    a:hover{
+        text-decoration: underline;
+        transition:8s ease-in-out;
+       
+    }
+    .main{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .intro {
+        margin-top: 90px;
+        margin-left: 90px;
+        font-size: 30px;
+    }
+    h6{
+        font-size: 40px;
+    }
+    
+    .profile img{
+        margin: 150px;
+        border-radius: 20px;
+        height: 300px;
+        box-shadow: #e8e8f3;
+    }
+    #About {
+        text-align: center;
+        font-size: 30px;
+        
+    }
+    .about-container{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    
+    }
+    .about-container img{
+        height: 300px;
+        
+        border-radius: 30px;
+        margin: 80px;
+    }
+    .about-us{
+        font-size: 25px;
+        margin: 40px;
+    
+    }
+    .about-us p{
+        padding: 20px;
+        background-color: rgb(245, 245, 248);
+        border-radius: 10%;
+    }
+    .skill-container{
+        text-align: center;
+        font-size: 30px;
+    }
+    .skills{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin: 50px;
+    }
+    .a{
+       background-color: white;
+        margin: 10px;
+        height: 180px;
+        width: 170px;
+        border-radius: 10%;
+        box-shadow: 0 5px 9px rgba(0,0,0,0.1);
+    }
+    .a:hover{
+        transform: translateY(-10px);
+        box-shadow: 0 15px 25px rgba(0, 0, 0, 0.2);
+        transition: all 0.3s ease;
+    }
+    .a img{
+        max-width: 150px;
+        max-height: 70px;
+        margin: 20px;
+       }
+        progress{
+    height: 20px;
+    width: 90%;
+    margin: 10px;
+       }
+       ::-webkit-progress-value{
+        background-color: #450dc8;
+       }
+       .contact-title{
+        font-size: 30px;
+        text-align: center;
+       }
+    form{
+        border: 2px solid rgb(225, 222, 222);
+       margin-left: 580px;
+       margin-top: 60px;
+    text-decoration: none;
+       height: max-content;
+       width: max-content;
+       padding: 50px;
+       background-color: aliceblue;
+       box-shadow: 0 4px 5px rgba(0,0,0,0.1);
+       border-radius: 10%;
+    }
+    button{
+        margin-top: 30px;
+        margin-left: 90px;
+        background-color: rgb(49, 236, 227);
+        border-radius: 10%;
+        size: 50px;
+        color: aliceblue;
+        height: 30px;
+        width: 70px;
+    }
+    input,textarea{
+        background-color:white;
+    }
 
+    .con a{
+        padding: 5px;
+    }
+    p{
+       text-align: center;
+       background-color: rgb(242, 245, 248);
+    }
+
+    
+}
     
  
